Table users {
  id bigint [primary key]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  nickname varchar(30) [not null, unique]
  created_at timestamp [not null, default: `now()`]
}

Table boards {
  id bigint [primary key]
  name varchar(255) [not null, unique]
  description varchar(255)
  create_at timestamp [not null ,default: `now()`]
}

Table posts{
  id bigint [primary key]
  board_id bigint [not null]
  user_id bigint [not null]
  title varchar(120) [not null]
  content text [not null]
  is_anonymous boolean [not null, default : false]
  created_at timestamp [not null, default : `now()`]
  updated_at timestamp [not null, default : `now()`]

  Indexes {
    user_id
    board_id
    created_at
  }
}

Table comments {
  id bigint [primary key]
  post_id bigint [not null]
  user_id bigint [not null]
  content text [not null]
  is_anonymous boolean [not null, default : false]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    post_id
    user_id
    created_at
  }
}

Table post_likes {
  id bigint [primary key]
  post_id bigint [not null]
  user_id bigint [not null]
  created_at timestamp [not null, default : `now()`]

  Indexes {
    (post_id, user_id) [unique]
    post_id
    user_id
  }
}

// Relations
Ref : posts.board_id > boards.id
Ref : posts.user_id > users.id
Ref : comments.post_id > posts.id
Ref : comments.user_id > users.id
Ref : post_likes.post_id > posts.id
Ref : post_likes.user_id > users.id